<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFF9C4"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MainActivity"
	android:gravity="center">

	<TextView
		android:id="@+id/headlineText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/AppHeadline"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="30sp"
		android:layout_margin="16dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="16dp"
		android:layout_below="@+id/headlineText"
		android:layout_centerHorizontal="true"
		>

		<Button
			android:id="@+id/spotifyStreamer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:background="#FFC400"
			android:onClick="appButtonClick"
			android:text="@string/SpotifyStreamerText"/>

		<Button
			android:id="@+id/scoresApp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:background="#FFC400"
			android:onClick="appButtonClick"
			android:text="@string/ScoresAppText"/>

		<Button
			android:id="@+id/libraryApp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:background="#FFC400"
			android:onClick="appButtonClick"
			android:text="@string/LibraryAppText"/>

		<Button
			android:id="@+id/buildItBigger"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:background="#FFC400"
			android:onClick="appButtonClick"
			android:text="@string/BuildItBiggerText"/>

		<Button
			android:id="@+id/xyzReader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:background="#FFC400"
			android:onClick="appButtonClick"
			android:text="@string/XYZReaderText"/>

		<Button
			android:id="@+id/capstoneApp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="16dp"
			android:textColor="@android:color/white"
			android:background="@color/colorPrimary"
			android:onClick="appButtonClick"
			android:padding="16dp"
			android:text="@string/CapstoneAppText"/>
	</LinearLayout>

</RelativeLayout>
